# fftvm

./: .gitignore  README.md  build.sh  clean.sh  deploy.sh  flow.typ  install_to_env.sh  libfftvm.cpp  module_export.py  pyproject.toml  readme.md  requirements.txt  setup.py  setup.sh
benchmark/: Makefile  ben01.cpp  ben01.py
experiments/: .env  .gitignore  libfftvm.cpp  requirements.tvm.txt  vm.cpp  vm01.cpp
experiments/device/: Makefile  libffi.cpp  run.py
experiments/ffi/: libffi.cpp  run.py
experiments/fftvm/: Makefile  compile_commands.json  libfftvm.cpp  test.py
experiments/pipeline1/: Makefile  libfftvm.cpp  segfault.py  test.py
experiments/pipeline2/: libfftvm.cpp  pipeline.cpp  test.py
experiments/pipeline3/: compile_commands.json  libfftvm.cpp  test.py
experiments/scratch/: cpp_hello.cpp  torch_pipeline.py  tvm_export.py  tvm_hello.py
fftvm/: __init__.py
src/: libfftvm.cpp
test/: example.py  rules.md  run.sh  test01.py  test_all-to-all.py  test_all-to-all2.py  test_all-to-all3.py
test/ffi/: test_all-to-all.py  test_all-to-all2.py  test_all-to-all3.py  test_basic_ffi.py  test_farm.py  test_misonode.py  test_simonode.py
test/tvm/: test_ai_workflow.py  test_multi_relax_pipe.py  test_tvm_farm.py
